# msx_tools

./: LICENSE  README.md
chgcpu/: CHGCPU.COM  README.TXT  README_EN.TXT
chgcpu/SRC/: BUILD.BAT  CHGCPU.ASM  zma.sym
detscc/: BUILD.BAT  DETSCC.ASM  DETSCC.COM  readme.txt  zma.sym
dumper/for_MSXPLAYer_turboRmode/: BIOSDUMP.DSK  (+2 more)
kana_conv/: kana_conv.py  kana_conv_small_ver.py
lrdiv/: compile.bat  lrdiv.asm  lrdiv.bas
scctest/: BUILD.BAT  SCCTEST.ASM  SCCTEST.COM  SCCTEST2.ASM  SCCTEST2.COM  readme.txt  zma.sym
usb_gamepad_bridge_for_msx/: CMakeLists.txt  JOYMEGAYSB.afdesign  TEPRA_joymegausb_label.tpe  label.vsdx  msx_mouse_timing.vsdx  readme.txt  readme_en.txt  tusb_config.h  usb_gamepad_bridge_for_msx.c  usb_gamepad_bridge_for_msx.uf2  usb_gamepad_bridge_for_msx.vsdx  ~$$how_to_make_JOYMEGA_USB.~vsdx
usb_keyboard_bridge_checker/: CMakeLists.txt  readme.txt  test_status.txt  usb_keyboard_bridge_checker.c  usb_keyboard_bridge_checker.uf2  usb_keyboard_bridge_checker.vsdx
usb_keyboard_bridge_for_msx/: CMakeLists.txt  FS-A1F.vsdx  encode.h  hb-f500_keyboard.txt  keymap_1st.h  keymap_2nd.h  readme.txt  readme_en.txt  test_status.txt  usb_keyboard_bridge_for_msx.c  usb_keyboard_bridge_for_msx.uf2  usb_keyboard_bridge_for_msx.vsdx  usb_keyboard_bridge_for_msx_AUTO01234567.c  usb_keyboard_bridge_for_msx_AUTO01234567.uf2  ~$$usb_keyboard_bridge_for_msx.~vsdx
usb_keyboard_bridge_for_msx/MX-101/: ATTENTION.txt
usb_keyboard_bridge_for_msx/makeup_encode_table/: encode.h  makeup_encode_table.c  run.bat
usb_keyboard_bridge_for_msx/test_of_encode/: main.c  run.bat
(+26 files in other folders)
